apps/home-assistant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    pod-security.kubernetes.io/enforce: privileged
---
